--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   video_player:
   flutter_localizations:
     sdk: flutter
-  light: ^2.1.0
-  flutter_barometer_plugin: ^0.0.1+3
-  flutter_sensors: ^1.0.1
+  # light: ^2.1.0
+  # flutter_barometer_plugin: ^0.0.1+3
+  # flutter_sensors: ^1.0.1
   # cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   atmospeed: ^1.0.2
@@ -59,6 +59,7 @@ dependencies:
   photo_view:
   google_maps_flutter: ^2.2.6
   url_launcher:
+  
 
 dev_dependencies:
   flutter_test:
