--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   photo_view:
   google_maps_flutter: ^2.2.6
   url_launcher:
+  flutter_staggered_grid_view: ^0.6.2
   
 
 dev_dependencies:
