--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   google_maps_flutter: ^2.2.6
   url_launcher:
   flutter_staggered_grid_view: ^0.6.2
+  location: ^4.4.0
   
 
 dev_dependencies:
