--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   url_launcher:
   flutter_staggered_grid_view: ^0.6.2
   location: ^4.4.0
+  date_time_picker:
+  flutter_credit_card:
+  flutter_tts:
+  audioplayers:
   
 
 dev_dependencies:
@@ -107,6 +111,9 @@ flutter:
   - family: KaushanScript
     fonts:
       - asset: assets/fonts/KaushanScript-Regular.ttf
+  - family: MyFlutterApp
+    fonts:
+      - asset: assets/fonts/MyFlutterApp.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
