--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "cmake.sourceDirectory": "C:/Users/aymam/StudioProjects/FayoumTour/linux"
+    "cmake.sourceDirectory": "C:/Users/aymam/StudioProjects/FayoumTour/linux",
+    "cmake.configureOnOpen": true
 }
